--- a/css/styles.css
+++ b/css/styles.css
@@ -591,6 +591,7 @@ text-align: center;
 }
 .example-item {
     
+    
     width: calc((100% - 60px) / 3);
     /* height: 404px; */
     margin-right: 30px;
@@ -615,6 +616,14 @@ border: 1px solid #EEEEEE;
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 cursor: pointer;
 } 
+.example-item:hover .content-text,
+ .example-item:focus .content-text {
+     opacity: 1;
+ }
+ .example-item:hover .content-img::before,
+ .example-item:focus .content-img::before {
+     opacity: 1;
+ }
 
 .example-item > .link:hover,
 .example-item > .link:focus {
@@ -699,13 +708,32 @@ line-height: 1.87;
 color: var(--primary-text-color);
 
 }
-
+.content-img {
+    position: relative;
+}
+.content-img::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+}
  .content-text {
-    
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     margin: 0;
+     padding: 63px 24px;
+    opacity: 0;
+    pointer-events: none;
 font-size: 18px;
 line-height: 1.56;
 color: var(--primary-white-color);
-background-color: var(--accent-color);
+/* background-color: var(--accent-color); */
 
 }
+
  
