--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
     --accent-color: #2196F3;
     --primary-white-color: #ffffff;
     --secondary-bg-color: #F5F4FA;
-    
+    --svg-color: #afb1b8;
+    --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
     margin: 0;
@@ -15,16 +16,15 @@ body {
   color: var(--primary-title-color);
   background-color: var(--primary-white-color);
 }
+ 
 .link {
     display: block;
     font-family: inherit;
-    color: var(--primary-title-color);
     text-decoration: none;
     cursor: pointer;
+   
 }
-.link:hover, .link:focus {
-    color: var(--accent-color);
-}
+
 .list {
     padding-left: 0;
     margin-top: 0;
@@ -69,6 +69,7 @@ img {
  font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover, .logo:focus {
     color: var(--accent-color);
@@ -104,6 +105,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .link:hover, .site-nav .link:focus {
     color: var(--accent-color);
@@ -120,28 +122,16 @@ position: absolute;
 
 width: 100%;
 height: 4px;
-top: 27px;
+top: 27px; 
 left: 0;
-margin-top: 27px;
+ margin-top: 27px; 
 
 background: var(--accent-color);
 border-radius: 2px;
 
 }
 
-  /* .current::after {
-     
-content: "";
 
-
-width: 100%;
-height: 4px;
-
-margin-top: 28px;
-
-background: var(--accent-color);
-border-radius: 2px;
-}   */
 /* Header link */
 .envelope {
     
@@ -166,6 +156,7 @@ border-radius: 2px;
 .contacts-item {
     display: flex; 
     margin-right: 30px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-item:hover, .contacts-item:focus {
     color: var(--accent-color);
@@ -233,7 +224,11 @@ letter-spacing: 0.06em;
 color: var(--primary-white-color);
 background-color: var(--accent-color);
 text-decoration: none;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
+}
+.hero-button:hover, .hero-button:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* Feature section */
 .section.features {
@@ -380,6 +375,7 @@ text-align: center;
     justify-content: center;
     margin-bottom: 24px;
 }
+
 .social-item {
      display: flex;
     justify-content: center;
@@ -387,12 +383,16 @@ text-align: center;
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    cursor: pointer;
+     cursor: pointer; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.social-item:hover, .social-item:focus {
+
+
+ .social-item:hover, .social-item:focus {
     background-color: var(--accent-color);
-    --color3: var(--primary-white-color); */
-} 
+    --color3: var(--primary-white-color);
+    
+ }
 .social-item > .link {
     display: flex;
 }
@@ -415,11 +415,19 @@ text-align: center;
     border: 1px solid #AFB1B8;
 border-radius: 4px;
 cursor: pointer;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
+}
+.icon-yaco {
+    --color3: var(--svg-color);
+}
+.icon-yaco:hover, .icon-yaco:focus {
+    fill: currentColor;
 }
 .user-item:last-child {
     margin-right: 0;
 }
+
 .user-item:hover, .user-item:focus {
     border: 1px solid var(--accent-color); 
     --color3: var(--accent-color);
@@ -427,10 +435,7 @@ cursor: pointer;
 }
 
 
-/* .icon:hover, .icon:focus {
-   
-  --color3: currentColor;
-} */
+ 
 
 
 /* Footer */
@@ -460,25 +465,34 @@ line-height: 1.18;
 text-decoration: none;
 margin-bottom: 10px;
 
-
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-logo span {
     color: var(--accent-color);
 } 
+.footer-logo:hover, .footer-logo:focus {
+    color: var(--accent-color);
+}
 .footer.list {
     font-style: normal;
 
 }
 
 .address {
-font-size: 14px;
-line-height: 1.71;
 color: var(--primary-white-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address:hover, .address:focus {
+    color: var(--accent-color);
 }
 .address-link {
 font-size: 14px;
 line-height: 1.71;
 color: rgba(255, 255, 255, 0.6);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address-link:hover, .address-link:focus {
+    color: var(--accent-color);
 }
 
 .socials {
