--- a/css/styles.css
+++ b/css/styles.css
@@ -384,13 +384,20 @@ text-align: center;
     height: 44px;
     border-radius: 50%;
      cursor: pointer; 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: background-color 3000ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.icon-socials {
+    fill: var(--svg-color);
+    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-socials:hover {
+    fill: var(--primary-white-color);
 }
 
 
  .social-item:hover, .social-item:focus {
     background-color: var(--accent-color);
-    --color3: var(--primary-white-color);
+    fill: var(--primary-white-color);
     
  }
 .social-item > .link {
@@ -415,22 +422,32 @@ text-align: center;
     border: 1px solid #AFB1B8;
 border-radius: 4px;
 cursor: pointer;
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+color: var(--svg-color);
+transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+.icon {
+    fill: var(--svg-color);
+    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+ .icon:hover {
+    fill: var(--accent-color);
+} 
 .icon-yaco {
-    --color3: var(--svg-color);
+    fill: var(--primary-text-color);
+    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-yaco:hover, .icon-yaco:focus {
-    fill: currentColor;
+    color: currentColor;
 }
+
 .user-item:last-child {
     margin-right: 0;
 }
 
 .user-item:hover, .user-item:focus {
     border: 1px solid var(--accent-color); 
-    --color3: var(--accent-color);
+     fill: var(--accent-color);  
 
 }
 
@@ -528,7 +545,7 @@ color: var(--primary-white-color);
     margin-right: 0;
 }
 .icon-socials.footer {
-    --color3: var(--primary-white-color);
+    fill: var(--primary-white-color);
 }
 .copyright {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
