--- a/css/styles.css
+++ b/css/styles.css
@@ -430,8 +430,8 @@ transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--svg-color);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- .icon:hover {
-    fill: var(--accent-color);
+ .icon:hover, .icon-yaco:focus {
+    color: var(--accent-color);
 } 
 .icon-yaco {
     fill: var(--primary-text-color);
