--- a/css/styles.css
+++ b/css/styles.css
@@ -390,8 +390,8 @@ text-align: center;
     fill: var(--svg-color);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-socials:hover {
-    fill: var(--primary-white-color);
+.icon-socials:hover, .icon-socials:focus {
+    color: currentColor;
 }
 
 
@@ -431,7 +431,7 @@ transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  .icon:hover, .icon-yaco:focus {
-    color: var(--accent-color);
+    color: currentColor;
 } 
 .icon-yaco {
     fill: var(--primary-text-color);
