--- a/css/styles.css
+++ b/css/styles.css
@@ -391,7 +391,7 @@ text-align: center;
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-socials:hover, .icon-socials:focus {
-    color: currentColor;
+    fill: var(--primary-white-color);
 }
 
 
@@ -430,15 +430,15 @@ transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--svg-color);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- .icon:hover, .icon-yaco:focus {
-    color: currentColor;
+ .icon:hover, .icon:focus {
+    fill: var(--accent-color);
 } 
 .icon-yaco {
     fill: var(--primary-text-color);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-yaco:hover, .icon-yaco:focus {
-    color: currentColor;
+    fill: var(--accent-color);
 }
 
 .user-item:last-child {
@@ -447,8 +447,7 @@ transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .user-item:hover, .user-item:focus {
     border: 1px solid var(--accent-color); 
-     fill: var(--accent-color);  
-
+    fill: var(--accent-color);
 }
 
 
