--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,7 @@ text-align: center;
     height: 44px;
     border-radius: 50%;
      cursor: pointer; 
+     fill: var(--svg-color);
     transition: background-color 3000ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .icon-socials {
@@ -422,7 +423,7 @@ text-align: center;
     border: 1px solid #AFB1B8;
 border-radius: 4px;
 cursor: pointer;
-color: var(--svg-color);
+fill: var(--svg-color);
 transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -433,13 +434,13 @@ transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
  .icon:hover, .icon:focus {
     fill: var(--accent-color);
 } 
-.icon-yaco {
+/* .icon-yaco {
     fill: var(--primary-text-color);
     transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-yaco:hover, .icon-yaco:focus {
     fill: var(--accent-color);
-}
+} */
 
 .user-item:last-child {
     margin-right: 0;
