--- a/css/styles.css
+++ b/css/styles.css
@@ -384,21 +384,22 @@ text-align: center;
     height: 44px;
     border-radius: 50%;
      cursor: pointer; 
-     fill: var(--svg-color);
-    transition: background-color 3000ms cubic-bezier(0.4, 0, 0.2, 1); 
+     
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.icon-socials {
+.icon-socials { 
     fill: var(--svg-color);
-    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-socials:hover, .icon-socials:focus {
+.social-item:hover .icon-socials,
+.social-item:focus .icon-socials {
     fill: var(--primary-white-color);
 }
+
 
 
  .social-item:hover, .social-item:focus {
     background-color: var(--accent-color);
-    fill: var(--primary-white-color);
     
  }
 .social-item > .link {
@@ -424,32 +425,24 @@ text-align: center;
 border-radius: 4px;
 cursor: pointer;
 fill: var(--svg-color);
-transition: border 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .icon {
     fill: var(--svg-color);
-    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- .icon:hover, .icon:focus {
+.user-item:hover .icon, .user-item:focus .icon {
     fill: var(--accent-color);
 } 
-/* .icon-yaco {
-    fill: var(--primary-text-color);
-    transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-yaco:hover, .icon-yaco:focus {
-    fill: var(--accent-color);
-} */
 
 .user-item:last-child {
     margin-right: 0;
 }
 
-.user-item:hover, .user-item:focus {
+.user-item:hover , .user-item:focus  {
     border: 1px solid var(--accent-color); 
-    fill: var(--accent-color);
-}
+} 
 
 
  
